fixed display on small screen

--- a/style.css
+++ b/style.css
@@ -148,6 +148,10 @@ body {
 	.garland-container {
 		margin-bottom: 180px;
 	}
+
+	.control-panel {
+		position: static;
+	}
 	
 	.control-panel__managment-tools {
 		flex-direction: column;
@@ -157,10 +161,15 @@ body {
 	
 	.control-panel__buttons {
 		order: 2;
+		position: static;
+		margin-bottom: 50px;
 	}
 
 	.control-panel__display {
 		padding: 50px 0;
+		display: block;
+		margin-bottom: 50px;
+		/*bottom: 20px;*/
 	}
 }
 
